<resources>
    <string name="app_name">Weather</string>
    <string name="search_hint">Search weather at other location</string>
    <string name="delhi">Delhi</string>
    <string name="mumbai">Mumbai</string>
    <string name="chennai">Chennai</string>
    <string name="bangalore">Bangalore</string>
    <string name="jaipur">Jaipur</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_weather_map_id">670ef582290c41534de02143c01c68ce</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="fiveDay">Today\'s Forecast</string>
    <string name="sixteenDay">Sixteen Day Forecast</string>
    <string name="title_activity_five_day">FiveDay</string>
    <string name="title_activity_sixteen_day_forecast">SixteenDayForecast</string>

</resources>
